# Projet3D

./: .gitignore  CMakeLists.txt  main.cpp
src/: main.cpp  mainwindow.cpp  mainwindow.h
src/renderer/: camera.cpp  camera.h  gpu_stucts.h  openglwindow.cpp  openglwindow.h
src/scene/: light.h  material.h  mesh.cpp  mesh.h  scene.cpp  scene.h
src/shaders/: basic.vert  raytrace.comp  screen.frag  screen.vert
